--- a/output/team.html
+++ b/output/team.html
@@ -25,7 +25,7 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Greg</h2>
+        <h2 class="card-title">Jeff</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
@@ -38,7 +38,7 @@
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Alice</h2>
+        <h2 class="card-title">SchnarvlePitt</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
